--- a/src/style/block/todo.scss
+++ b/src/style/block/todo.scss
@@ -26,7 +26,7 @@
   letter-spacing: 0px;
   text-align: left;
 }
-.todo__position {
+.todo__btn {
   margin-right: 20px;
   width: 30px;
   height: 30px;
@@ -34,15 +34,7 @@
   background-color: white;
   background-repeat: no-repeat;
 }
-.todo__up {
-  padding: 0;
-  background-image: url(/src/images/up.png);
-}
-.todo__down {
-  padding: 0;
-  background-image: url(/src/images/down.png);
-}
-.todo__fuctional {
+.todo__btn--functional {
   padding: 0;
   background-image: url(/src/images/burger.png);
 }
@@ -62,4 +54,13 @@
   height: 25px;
   margin-right: 10px;
   border-radius: 8px;
+}
+.todo__input {
+  width: 500px;
+}
+.todo__btn--add {
+  background-color: #95b4b4;
+  border-radius: 20px;
+  font-size: 20px;
+  font-weight: 900;
 }
