--- a/src/style/block/todo.scss
+++ b/src/style/block/todo.scss
@@ -57,6 +57,8 @@
 }
 .todo__input {
   width: 500px;
+  margin-bottom: 20px;
+  margin-right: 20px;
 }
 .todo__btn--add {
   background-color: #95b4b4;
