--- a/src/style/block/todo.scss
+++ b/src/style/block/todo.scss
@@ -25,6 +25,7 @@
   line-height: 23px;
   letter-spacing: 0px;
   text-align: left;
+  text-decoration: none;
 }
 .todo__btn {
   margin-right: 20px;
@@ -54,6 +55,7 @@
   height: 25px;
   margin-right: 10px;
   border-radius: 8px;
+  background-color: white;
 }
 .todo__input {
   width: 500px;
