--- a/src/style/block/todo.scss
+++ b/src/style/block/todo.scss
@@ -7,10 +7,11 @@
 }
 .todo {
   background-color: white;
-  width: 800px;
+  min-width: 800px;
   border-radius: 8px;
   padding-left: 25px;
 }
+
 .todo__title {
   margin: 0;
   margin-bottom: 15px;
@@ -35,9 +36,22 @@
   background-color: white;
   background-repeat: no-repeat;
 }
-.todo__btn--functional {
-  padding: 0;
-  background-image: url(/src/images/burger.png);
+.todo__btn-priority {
+  margin-right: 20px;
+  margin-bottom: 10px;
+  width: 64px;
+  height: 64px;
+  border: none;
+  background-color: white;
+}
+.todo__btn-priority--high {
+  background-image: url(/src/images/red-flag-icon.svg);
+}
+.todo__btn-priority--normal {
+  background-image: url(/src/images/flag-green-icon.svg);
+}
+.todo__btn-priority--low {
+  background-image: url(/src/images/flag-orange-icon.svg);
 }
 .todo__new {
   margin-bottom: 15px;
@@ -57,6 +71,7 @@
   border-radius: 8px;
   background-color: white;
 }
+
 .todo__input {
   width: 500px;
   margin-bottom: 20px;
